p2/confs/app-one.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
  labels:
    app: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
        - name: app-one
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: app-one
              mountPath: /usr/share/nginx/html
      volumes:
        - name: app-one
          configMap:
            name: app-one
            items:
              - key: index.html
                path: index.html

---
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  selector:
    app: app-one
  ports:
    - name: http
      protocol: TCP
      port: 80
