p2/confs/app-three.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
  labels:
    app: app-three
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
        - name: app-three
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: app-three
              mountPath: /usr/share/nginx/html
      volumes:
        - name: app-three
          configMap:
            name: app-three
            items:
              - key: index.html
                path: index.html

---
apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  selector:
    app: app-three
  ports:
    - name: http
      protocol: TCP
      port: 80

---
